# flex_exercise

./: .gitignore  CMakeLists.txt  README.md  compiler.py  current_implementation.xlsx  errors.txt  executor.py  flex.lex  tests_notworking.txt  tests_working.txt  treeBuilder.py
documentation/: language.txt
error_handling/: error.py
lex/: flex.lex
lexical/: lexical.py
misc/: executor.py  treeBuilder.py
python/: lexical.py  syntax.py  tokens.py
sources/lex/: flex.lex
syntax/: syntax.py
syntax/rules/: conditions.py  expressions.py  savedVariables.py  terms.py  varConcat.py  variables.py
tests/: test_working.txt
tokens/: tokens.py
yacc/: syntax.y
